# NGHMusic

./: Cargo.toml
.trae/specs/add-linux-support/: checklist.md  spec.md  tasks.md
.trae/specs/build-cross-platform-music-app/: checklist.md  spec.md  tasks.md
.trae/specs/fix-code-quality-and-bugs/: checklist.md  spec.md  tasks.md
.trae/specs/redesign-ui-doubao-style/: checklist.md  spec.md  tasks.md
.trae/specs/redevelop-native-per-platform/: checklist.md  spec.md  tasks.md  vulnerability-report.md
android/: build.gradle.kts  detekt.yml  settings.gradle.kts
android/app/: build.gradle.kts
core/: Cargo.toml  clippy.toml  rustfmt.toml
core/.cargo/: config.toml
core/ffi-bindings/csharp/: MusicCoreException.cs  MusicCoreNative.cs
core/ffi-bindings/swift/: MusicCore.swift  module.modulemap
core/src/: cache.rs  error.rs  feiniu.rs  ffi.rs  lib.rs  library.rs  lyric.rs  metadata.rs  models.rs  search.rs
core/src/cache/: mod.rs
core/src/favorites/: mod.rs
core/src/feiniu/: mod.rs
core/src/ffi/: mod.rs
core/src/lyrics/: mod.rs
core/src/metadata/: mod.rs
core/src/player/: mod.rs
core/src/playlist/: mod.rs
core/src/protocols/: dlna.rs  ftp.rs  mod.rs  nfs.rs  smb.rs  webdav.rs
core/src/ranking/: mod.rs
core/src/search/: mod.rs
core/src/sources/: community.rs  engine.rs  http_source.rs  json.rs  local.rs  migration.rs  mod.rs  schema.rs
core/src/storage/: mod.rs
desktop/: .eslintignore  .eslintrc.json  .prettierrc.json  package.json
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs
desktop/src/pages/: favorites.js  leaderboard.js  local.js  lyrics.js  playlist.js  search.js  settings.js
docs/: bug-report.md  sound-source-development.md
docs/api/: feiniu-api.md  protocol-api.md  sound-source-api.md
harmonyos/: build-profile.json5  code-scan.yml  oh-package.json5
harmonyos/entry/: build-profile.json5  oh-package.json5
ios/: .swiftlint.yml
ios/MusicApp/: MusicAppApp.swift  module.modulemap
ios/MusicApp/Core/: AudioPlayer.swift  FFIBridge.swift  Models.swift
ios/MusicApp/Theme/: Theme.swift
ios/MusicApp/Views/: SearchView.swift
ios/MusicPlayerApp/: ContentView.swift  MusicPlayerApp.swift
ios/MusicPlayerApp/Bridge/: MusicCoreBridge.swift
ios/MusicPlayerApp/Models/: Song.swift
ios/MusicPlayerApp/Player/: PlayerManager.swift
ios/MusicPlayerApp/Views/: AppTheme.swift  FavoritesView.swift  LeaderboardView.swift  LocalMusicView.swift  LyricsView.swift  NasView.swift  PlaybackBar.swift  PlaylistView.swift  SearchView.swift  SettingsView.swift
ios/uniffi/: music_core.udl
linux/: Cargo.toml
linux/resources/: style.css
linux/src/: core_service.rs  main.rs  player_service.rs  theme.rs  utils.rs
linux/src/views/: favorites.rs  leaderboard.rs  local_music.rs  lyrics.rs  mod.rs  nas.rs  playback_bar.rs  playlist.rs  search.rs  settings.rs  sidebar.rs
macos/: .swiftlint.yml  ContentView.swift  MusicPlayerAppApp.swift  Package.swift
macos/Models/: Models.swift
macos/Services/: CoreService.swift  PlayerService.swift
macos/Theme/: AppTheme.swift
macos/Views/: FavoritesView.swift  LeaderboardView.swift  LocalMusicView.swift  LyricsView.swift  NasView.swift  PlaybackBar.swift  PlaylistView.swift  SearchView.swift  SettingsView.swift
schemas/: sound-source.schema.json
windows/: .editorconfig  Directory.Build.props  MusicPlayerApp.sln
windows/MusicPlayerApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MusicPlayerApp.csproj
windows/MusicPlayerApp/Models/: Models.cs
windows/MusicPlayerApp/Properties/: launchSettings.json
windows/MusicPlayerApp/Services/: CoreService.cs  MusicCoreNative.cs  PlayerService.cs
(+60 files in other folders)
