[package]
name = "music-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "Shared cross-platform core for the music player (sources, metadata, search, cache, protocols, feiniu)"

[lib]
name = "music_core"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
