[package]
name = "music-core"
version = "0.1.0"
edition = "2021"
description = "跨平台音乐播放器的共享 Rust 核心"

[lib]
name = "music_core"
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
lofty = "0.21"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
log = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
jsonschema = "0.22"
suppaftp = "6"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
