[package]
name = "music-desktop"
version = "0.1.0"
edition = "2021"
description = "跨平台音乐播放器桌面端（Tauri 2）"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
music-core = { path = "../../core" }
